# proofreader-fallback

./: Cargo.toml  Dockerfile
src/: main.rs  proofreader.rs  routes.rs
static/: index.html  script.js
