[package]
name = "proofreader-fallback"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
gcp_auth = "0.12.3"
gemini-rs = { git = "https://github.com/andreban/gemini-rs/", rev = "8366368" }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.1", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = [
    "fs",
    "cors",
    "compression-br",
    "compression-deflate",
    "compression-gzip",
    "compression-zstd",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
